src/elements/snapshots/panoramix__elements__flex_element__tests__empty_rowcol-3.snap
---
source: src/elements/flex_element.rs
expression: row_data
---
(
    FlexData {
        axis: Horizontal,
        child: EmptyElementData,
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
        flex_container: FlexContainerParams {
            cross_alignment: Center,
            main_alignment: Start,
            fill_major_axis: false,
        },
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (),
)
