src/elements/snapshots/panoramix__elements__flex_element__tests__new_row_multi_items.snap
---
source: src/elements/flex_element.rs
expression: row

---
Flex {
    axis: Horizontal,
    child: ElementTuple_3(
        Label {
            text: "Hello",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        Label {
            text: "Hello2",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        Label {
            text: "Hello3",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
    ),
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    flex_container: FlexContainerParams {
        cross_alignment: Center,
        main_alignment: Start,
        fill_major_axis: false,
    },
}
