src/elements/snapshots/panoramix__elements__flex_element__tests__new_rowcol_single_item-2.snap
---
source: src/elements/flex_element.rs
expression: column

---
Flex {
    axis: Vertical,
    child: ElementTuple_1(
        Label {
            text: "Greetings",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        PhantomData,
        PhantomData,
    ),
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    flex_container: FlexContainerParams {
        cross_alignment: Center,
        main_alignment: Start,
        fill_major_axis: false,
    },
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
