src/elements/snapshots/panoramix__elements__flex_element__tests__new_rowcol_single_item-3.snap
---
source: src/elements/flex_element.rs
expression: row_data

---
(
    FlexData {
        axis: Horizontal,
        child: ElementTupleData(
            LabelData {
                text: "Hello",
                flex: FlexParams {
                    flex: None,
                    alignment: None,
                },
            },
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
            EmptyElementData,
        ),
        flex: FlexParams {
            flex: None,
            alignment: None,
        },
        flex_container: FlexContainerParams {
            cross_alignment: Center,
            main_alignment: Start,
            fill_major_axis: false,
        },
        container_style: ContainerStyle {
            background: None,
            border: None,
            corner_radius: Concrete(
                0.0,
            ),
        },
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
