src/elements/snapshots/panoramix__elements__flex_element__tests__new_rowcol_single_item.snap
---
source: src/elements/flex_element.rs
expression: row

---
Flex {
    axis: Horizontal,
    child: ElementTuple_1(
        Label {
            text: "Hello",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
    ),
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    flex_container: FlexContainerParams {
        cross_alignment: Center,
        main_alignment: Start,
        fill_major_axis: false,
    },
    container_style: ContainerStyle {
        background: None,
        border: None,
        corner_radius: Concrete(
            0.0,
        ),
    },
}
