src/elements/snapshots/panoramix__elements__flex_element__tests__rowcol_widget-2.snap
---
source: src/elements/flex_element.rs
expression: column_state_2

---
RootWidget(
    Column(
        Column(
            Row(
                Label(
                    "World1",
                ),
                Label(
                    "World2",
                ),
            ),
            Row(
                Label(
                    "World3",
                ),
                Label(
                    "World4",
                ),
            ),
            Label(
                "World5",
            ),
            Label(
                "World6",
            ),
        ),
    ),
)
