src/elements/snapshots/panoramix__elements__flex_element__tests__rowcol_widget.snap
---
source: src/elements/flex_element.rs
expression: column_state

---
RootWidget(
    Column(
        Container(
            Column(
                Container(
                    Row(
                        Label(
                            "Hello1",
                        ),
                        Label(
                            "Hello2",
                        ),
                    ),
                ),
                Container(
                    Row(
                        Label(
                            "Hello3",
                        ),
                        Label(
                            "Hello4",
                        ),
                    ),
                ),
                Label(
                    "Hello5",
                ),
                Label(
                    "Hello6",
                ),
            ),
        ),
    ),
)
